--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -5,6 +5,7 @@
     width: 220px;
     display: flex;
     align-items: center;
+
   }
   
   /* Contact image */
@@ -13,15 +14,18 @@
     margin-right: 1em;
     width: 48px;
     height: 48px;
+    position: relative;
+    top:0px;
+    left: -90px;
   }
   
   /* Name */
   .Contact .name {
     margin: 0 0 0.25rem;
     color: #eee;
-    position: absolute;
-    left: 80px;
-    top: 20px;
+    position: relative;
+    left: 40px;
+    top: 0px;
   }
   
   /* Status text */
@@ -29,9 +33,9 @@
     color: #999;
     margin: 0;
     display: inline-block;
-    position: absolute;
-    left: 95px;
-    top: 50px;
+    position: relative;
+    left: -60px;
+    top: 22px;
   }
   
   /* Status (rounded&colored indicator) */
@@ -46,12 +50,16 @@
   
   .Contact .status .status-online {
     background: #aed581;
-    position: absolute;
-    left: 80px;
-    top: 55px;
-  }
+    position: relative;
+    left: -100px;
+    top: 40px;
+  } 
   
   .Contact .status .status-offline {
     background: #f4511e;
+    position: relative;
+    left: -100px;
+    top: 40px;
   }
+
   
